Model creation and database migration

--- a/COMP2084GetMeAGame/appsettings.json
+++ b/COMP2084GetMeAGame/appsettings.json
@@ -1,7 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-COMP2084GetMeAGame-6FAB099F-236E-456B-A3E4-B0639D570023;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=HRUDYA-RAJ\\MSSQLSERVER2019;Database=GetMeAGame;Integrated Security=true"
+        //"DefaultConnection": "Server=HRUDYA-RAJ\\MSSQLSERVER2019;Database=GetMeAGame;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=gchrudyaraj.database.windows.net;Database=dbhrudyaraj;User Id=hrudyaraj;Password=&Hru5466&"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
