Add to cart implemented

--- a/COMP2084GetMeAGame/appsettings.json
+++ b/COMP2084GetMeAGame/appsettings.json
@@ -2,7 +2,7 @@
     "ConnectionStrings": {
         //"DefaultConnection": "Server=HRUDYA-RAJ\\MSSQLSERVER2019;Database=GetMeAGame;Integrated Security=true"
         //"DefaultConnection": "Server=HRUDYA-RAJ\\MSSQLSERVER2019;Database=GetMeAGame;Trusted_Connection=True;MultipleActiveResultSets=true"
-        "DefaultConnection": "Server=gchrudyaraj.database.windows.net;Database=dbhrudyaraj;User Id=hrudyaraj;Password=&Hru5466&"
+        "DefaultConnection": "Server=hrudyarajgc.database.windows.net;Database=getmeagame_db;User Id=hrudyaraj;Password=&Hru5466&"
     },
   "Logging": {
     "LogLevel": {
